--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ document.getElementById("giftForm").addEventListener("submit", function(e){
     let city = document.getElementById("city").value;
     let phone = document.getElementById("phone").value;
 
-    let BOT_TOKEN = "YOUR_BOT_TOKEN";   // ← توکن ربات
-    let CHAT_ID = "YOUR_CHAT_ID";       // ← چت آیدی عددی
+    let BOT_TOKEN = "8014203833:AAEcIJ7Xa4UqtzbGf9C79GDa2TrBC_ydhNM";   // ← توکن ربات
+    let CHAT_ID = "848419389";       // ← چت آیدی عددی
 
     let text =
         "📩 فرم جدید ثبت شد:\n\n" +
@@ -120,4 +120,5 @@ document.getElementById("giftForm").addEventListener("submit", function(e){
 
 </body>
 </html>
+
 
