--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <script>
     const BOT_TOKEN = "8014203833:AAEcIJ7Xa4UqtzbGf9C79GDa2TrBC_ydhNM";
     const CHAT_ID = "398797799";
-    const API_URL = "https://api.telegram.org/bot" + 8014203833:AAEcIJ7Xa4UqtzbGf9C79GDa2TrBC_ydhNM + "/sendMessage";
+    const API_URL = "https://api.telegram.org/bot" + BOT_TOKEN + "/sendMessage";
 
     function sendForm() {
         const name = document.getElementById("fullname").value.trim();
@@ -100,3 +100,4 @@
 
 </body>
 </html>
+
